<resources>
    <string name="app_name">IMalive</string>
    <string name="action_settings">Settings</string>
    <string name="reminder_date_title">Reminder Date</string>
    <string name="reminder_message_title">Reminder Message</string>
    <string name="alive_message_location_title">Location (optional)</string>
    <string name="alive_message_weather_title">Weather (optional)</string>
    <string name="alive_message_select_location_button">SELECT LOCATION</string>
    <string name="alive_message_attach_weather_button">ATTACH WEATHER</string>
    <string name="alive_message_weather_suffix">and it\'s currently</string>
    <string name="reminder_select_time_button">SELECT TIME</string>
    <string name="reminder_delete_button">DELETE</string>
    <string name="reminder_save_button">Save Reminder</string>
    <string name="reminder_create_button">New Reminder</string>
    <string name="reminder_delivery_day_sunday">S</string>
    <string name="reminder_delivery_day_monday">M</string>
    <string name="reminder_delivery_day_tuesday">T</string>
    <string name="reminder_delivery_day_wednesday">W</string>
    <string name="reminder_delivery_day_thursday">T</string>
    <string name="reminder_delivery_day_friday">F</string>
    <string name="reminder_delivery_day_saturday">S</string>
    <string name="reminder_delivery_day_sunday_full">Sunday</string>
    <string name="reminder_delivery_day_monday_full">Monday</string>
    <string name="reminder_delivery_day_tuesday_full">Tuesday</string>
    <string name="reminder_delivery_day_wednesday_full">Wednesday</string>
    <string name="reminder_delivery_day_thursday_full">Thursday</string>
    <string name="reminder_delivery_day_friday_full">Friday</string>
    <string name="reminder_delivery_day_saturday_full">Saturday</string>
    <string name="reminder_notification_title">IMalive!</string>
    <string name="reminder_notification_text">wants to know you\'re alive.</string>
    <string name="reminder_notification_action_still_alive">Yes, IMalive!</string>
    <string name="error_invalid_reminder_day">Select at least one day to send your message to</string>
    <string name="error_invalid_reminder_time">Select a time to send your message to</string>
    <string name="error_invalid_reminder_message">Enter a message to send to</string>
    <string name="empty_state_title">IMalive!</string>
    <string name="empty_state_message">Create reminders so the people who care about you will know that you\'re alive.</string>
    <string name="empty_state_widget_message">No IMalive reminders</string>
    <string name="progress_dialog_weather_title">Fetching Weather</string>
    <string name="progress_dialog_weather_message">Please wait...</string>
    <string name="message_sent_message">Your IMalive message has been sent to</string>
    <string name="message_send_button">Send Message</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="sign_in">Sign In</string>
    <string name="configuration_required">Configuration is required</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_responnse">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>
</resources>
